[gd_scene load_steps=74 format=3 uid="uid://5be7uvkii4qi"]

[ext_resource type="Script" path="res://item.gd" id="1_oikgc"]
[ext_resource type="Texture2D" uid="uid://2ovabgxnw7g4" path="res://assets/items/apple.png" id="2_1c3w8"]
[ext_resource type="Texture2D" uid="uid://buco1tvc58cbo" path="res://assets/items/appear.png" id="2_54io7"]
[ext_resource type="Texture2D" uid="uid://drkv200loxxgq" path="res://assets/items/explode.png" id="3_0cfss"]
[ext_resource type="Script" path="res://before.gd" id="3_eccyi"]
[ext_resource type="Texture2D" uid="uid://dtxx5ghj5e3pb" path="res://assets/items/fish.png" id="3_gyfqg"]
[ext_resource type="Texture2D" uid="uid://bl13m8qxm1p4i" path="res://assets/items/heart.png" id="4_8sgrl"]
[ext_resource type="Texture2D" uid="uid://dqn4uwfr6wko7" path="res://assets/items/pof.png" id="4_urfxv"]
[ext_resource type="Texture2D" uid="uid://che4p3kmxv2fd" path="res://assets/items/slimte.png" id="5_mblsj"]
[ext_resource type="Texture2D" uid="uid://bf7kb7i5u02wf" path="res://assets/items/sonic.png" id="6_j7rsc"]
[ext_resource type="Texture2D" uid="uid://dxebomqqs12oi" path="res://assets/items/square guy.png" id="7_slw7p"]
[ext_resource type="Texture2D" uid="uid://bcc40p2trgl63" path="res://assets/items/transh.png" id="8_3dp4x"]
[ext_resource type="Script" path="res://item_sprite.gd" id="11_p6nyw"]
[ext_resource type="Script" path="res://audio_stream_player.gd" id="13_nibbj"]
[ext_resource type="Script" path="res://sound_effects.gd" id="14_1qwn5"]

[sub_resource type="AtlasTexture" id="AtlasTexture_gy4uy"]
atlas = ExtResource("2_54io7")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gxpst"]
atlas = ExtResource("2_54io7")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2kp6n"]
atlas = ExtResource("2_54io7")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8sqnj"]
atlas = ExtResource("2_54io7")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jqprk"]
atlas = ExtResource("2_54io7")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_p0dqm"]
atlas = ExtResource("2_54io7")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_h0s3a"]
atlas = ExtResource("2_54io7")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_q4iv1"]
atlas = ExtResource("3_0cfss")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8xvt0"]
atlas = ExtResource("3_0cfss")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8qrcw"]
atlas = ExtResource("3_0cfss")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_bkxp3"]
atlas = ExtResource("3_0cfss")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vj7jp"]
atlas = ExtResource("3_0cfss")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_u4vpe"]
atlas = ExtResource("3_0cfss")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_678ps"]
atlas = ExtResource("3_0cfss")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_r77vx"]
atlas = ExtResource("3_0cfss")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0akkk"]
atlas = ExtResource("3_0cfss")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_eh5wt"]
atlas = ExtResource("3_0cfss")
region = Rect2(224, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7odlj"]
atlas = ExtResource("4_urfxv")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vn2cg"]
atlas = ExtResource("4_urfxv")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4jsps"]
atlas = ExtResource("4_urfxv")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qmgjb"]
atlas = ExtResource("4_urfxv")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8e0m8"]
atlas = ExtResource("4_urfxv")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xvxxj"]
atlas = ExtResource("4_urfxv")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7b1mj"]
atlas = ExtResource("4_urfxv")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7dyid"]
atlas = ExtResource("4_urfxv")
region = Rect2(224, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_50ivd"]
atlas = ExtResource("4_urfxv")
region = Rect2(256, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_lhtib"]
resource_local_to_scene = true
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gy4uy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gxpst")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2kp6n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8sqnj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jqprk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p0dqm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h0s3a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q4iv1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8xvt0")
}],
"loop": false,
"name": &"default",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8qrcw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bkxp3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vj7jp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u4vpe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_678ps")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r77vx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0akkk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eh5wt")
}],
"loop": false,
"name": &"destroy",
"speed": 20.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7odlj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vn2cg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4jsps")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qmgjb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8e0m8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xvxxj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7b1mj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7dyid")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_50ivd")
}],
"loop": false,
"name": &"pof",
"speed": 17.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_4ni84"]
atlas = ExtResource("2_1c3w8")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_upcm4"]
atlas = ExtResource("2_1c3w8")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_c0ts1"]
atlas = ExtResource("2_1c3w8")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_45awr"]
atlas = ExtResource("2_1c3w8")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gpbb5"]
atlas = ExtResource("3_gyfqg")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6d7kc"]
atlas = ExtResource("3_gyfqg")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hr8f5"]
atlas = ExtResource("3_gyfqg")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0bxv2"]
atlas = ExtResource("3_gyfqg")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_negm0"]
atlas = ExtResource("4_8sgrl")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tl8j1"]
atlas = ExtResource("4_8sgrl")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_nxjdj"]
atlas = ExtResource("4_8sgrl")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4uxph"]
atlas = ExtResource("4_8sgrl")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fb0a3"]
atlas = ExtResource("5_mblsj")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_bqfbx"]
atlas = ExtResource("5_mblsj")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vjw4m"]
atlas = ExtResource("5_mblsj")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_waj8b"]
atlas = ExtResource("5_mblsj")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_c4uo3"]
atlas = ExtResource("5_mblsj")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_n2chp"]
atlas = ExtResource("6_j7rsc")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_six4k"]
atlas = ExtResource("6_j7rsc")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ql8bd"]
atlas = ExtResource("6_j7rsc")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_neb6s"]
atlas = ExtResource("6_j7rsc")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_yw5by"]
atlas = ExtResource("7_slw7p")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8xhgg"]
atlas = ExtResource("7_slw7p")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vquwx"]
atlas = ExtResource("7_slw7p")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_bhauf"]
atlas = ExtResource("7_slw7p")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_d3tv2"]
atlas = ExtResource("8_3dp4x")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hjq0w"]
atlas = ExtResource("8_3dp4x")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lb1be"]
atlas = ExtResource("8_3dp4x")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vm3jl"]
atlas = ExtResource("8_3dp4x")
region = Rect2(96, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_efvgg"]
resource_local_to_scene = true
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4ni84")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_upcm4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c0ts1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_45awr")
}],
"loop": true,
"name": &"apple",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gpbb5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6d7kc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hr8f5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0bxv2")
}],
"loop": true,
"name": &"fish",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_negm0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tl8j1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nxjdj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4uxph")
}],
"loop": true,
"name": &"heart",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fb0a3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bqfbx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vjw4m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_waj8b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c4uo3")
}],
"loop": true,
"name": &"slimte",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_n2chp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_six4k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ql8bd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_neb6s")
}],
"loop": true,
"name": &"sonic",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_yw5by")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8xhgg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vquwx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bhauf")
}],
"loop": true,
"name": &"square guy",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_d3tv2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hjq0w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lb1be")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vm3jl")
}],
"loop": true,
"name": &"transh",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2ho4w"]
size = Vector2(33, 33)

[node name="Item" type="Node2D"]
script = ExtResource("1_oikgc")

[node name="Before" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_lhtib")
script = ExtResource("3_eccyi")

[node name="ItemSprite" type="AnimatedSprite2D" parent="."]
visible = false
sprite_frames = SubResource("SpriteFrames_efvgg")
animation = &"apple"
script = ExtResource("11_p6nyw")

[node name="Area2D" type="Area2D" parent="ItemSprite"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ItemSprite/Area2D"]
position = Vector2(0.5, 0.5)
shape = SubResource("RectangleShape2D_2ho4w")

[node name="SAM" type="AudioStreamPlayer" parent="."]
script = ExtResource("13_nibbj")

[node name="SoundEffects" type="AudioStreamPlayer" parent="."]
volume_db = 1.238
script = ExtResource("14_1qwn5")

[connection signal="animation_finished" from="Before" to="." method="_on_appear_animation_finished"]
[connection signal="body_entered" from="ItemSprite/Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="finished" from="SoundEffects" to="." method="_on_sound_effects_finished"]
